--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
           <li>pepper jack</li>
         </ul>
       </li>
-      <li>1 tbsp of butterr</li>
+      <li>1 tbsp of butter</li>
     </ul>
 
     <a href="https://flatironschool.com">Flatiron School</a>
